feat: add LearningHeader component and styles for improved UI/UX
- Implemented LearningHeader component for workspace and submissions views
- Added theme management with light, dark, and system modes
- Introduced app-refresh.css for a refreshed design with new color variables
- Created lab.css for lab-specific styles, enhancing layout and responsiveness